Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20640

Segfault on not setting a delegate for a ListView with networked source

    XMLWordPrintable

Details

    • 94b44b19edbb501d4cbe7519fb7202ead81746cc (qt/tqtc-qtdeclarative/5.12.0)

    Description

      Run the attached qml. Basically it specifies an XmlListModel downloaded from flickr.com, and a ListView using said model but no delegate specified.

      When the model has downloaded (progress is 1) it segfaults in in FxListItem/FxListItemSG::setPosition(double)
      Does not seem to occur on setting the delegate, or using a local ListModel.

      #0  0xb75806e9 in FxListItemSG::setPosition(double) () from /home/dajansen/depot/qt/qt5/qtbase/lib/libQtDeclarative.so.5
      #1  0xb757ed19 in QSGListView::itemsInserted (this=0xafa00b20, modelIndex=0, count=20) at items/qsglistview.cpp:1657
      #2  0xb764ca7f in QSGListView::qt_static_metacall (_o=0xafa00b20, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0xbfffe754)
          at .moc/debug-shared/moc_qsglistview_p.cpp:272
      #3  0xb55218e4 in QMetaObject::activate (sender=0xafa05828, m=0xb7d0abc4, local_signal_index=1, argv=0xbfffe754) at kernel/qobject.cpp:3376
      #4  0xb764d7d3 in QSGVisualModel::itemsInserted (this=0xafa05828, _t1=0, _t2=20) at .moc/debug-shared/moc_qsgvisualitemmodel_p.cpp:153
      #5  0xb7587cfa in QSGVisualDataModel::_q_itemsInserted (this=0xafa05828, index=0, count=20) at items/qsgvisualitemmodel.cpp:1108
      #6  0xb764ddb0 in QSGVisualDataModel::qt_static_metacall (_o=0xafa05828, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfffe914)
          at .moc/debug-shared/moc_qsgvisualitemmodel_p.cpp:397
      #7  0xb55218e4 in QMetaObject::activate (sender=0x821f7d0, m=0xb7d07a5c, local_signal_index=0, argv=0xbfffe914) at kernel/qobject.cpp:3376
      #8  0xb7637a7f in QListModelInterface::itemsInserted (this=0x821f7d0, _t1=0, _t2=20) at .moc/debug-shared/moc_qlistmodelinterface_p.cpp:107
      #9  0xb735862a in QDeclarativeXmlListModel::queryCompleted (this=0x821f7d0, result=...) at util/qdeclarativexmllistmodel.cpp:1035
      #10 0xb7637dd0 in QDeclarativeXmlListModel::qt_static_metacall (_o=0x821f7d0, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xafa0c200)
          at .moc/debug-shared/moc_qdeclarativexmllistmodel_p.cpp:126
      #11 0xb551b61e in QMetaCallEvent::placeMetaCall (this=0xafa093a8, object=0x821f7d0) at kernel/qobject.cpp:541
      #12 0xb551cfcb in QObject::event (this=0x821f7d0, e=0xafa093a8) at kernel/qobject.cpp:1122
      #13 0xb58680d6 in QApplicationPrivate::notify_helper (this=0x80a1778, receiver=0x821f7d0, e=0xafa093a8) at kernel/qapplication.cpp:4497
      #14 0xb5865995 in QApplication::notify (this=0xbffff300, receiver=0x821f7d0, e=0xafa093a8) at kernel/qapplication.cpp:3879
      #15 0xb5504278 in QCoreApplication::notifyInternal (this=0xbffff300, receiver=0x821f7d0, event=0xafa093a8) at kernel/qcoreapplication.cpp:839
      #16 0xb7ea205f in QCoreApplication::sendEvent (receiver=0x821f7d0, event=0xafa093a8)
          at ../../../qtbase/include/QtCore/../../src/corelib/kernel/qcoreapplication.h:212
      #17 0xb550537a in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80a0cd8) at kernel/qcoreapplication.cpp:1481
      #18 0xb5504e49 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1351
      #19 0xb5932df0 in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:217
      #20 0xb553ed02 in postEventSourceDispatch (s=0x80a7378) at kernel/qeventdispatcher_glib.cpp:279
      #21 0xb4d1e5e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
      #22 0xb4d222d8 in ?? () from /lib/libglib-2.0.so.0
      #23 0xb4d224b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
      #24 0xb553fd7a in QEventDispatcherGlib::processEvents (this=0x80a5178, flags=...) at kernel/qeventdispatcher_glib.cpp:424
      #25 0xb593f44a in QGuiEventDispatcherGlib::processEvents (this=0x80a5178, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
      #26 0xb55011b3 in QEventLoop::processEvents (this=0xbffff25c, flags=...) at kernel/qeventloop.cpp:149
      #27 0xb5501419 in QEventLoop::exec (this=0xbffff25c, flags=...) at kernel/qeventloop.cpp:225
      #28 0xb55048e9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1106
      #29 0xb586564e in QApplication::exec () at kernel/qapplication.cpp:3758
      #30 0x0805037d in main (argc=2, argv=0xbffff514) at main.cpp:568
      

      Attachments

        1. xmllistmodel.qml
          2 kB
          Damian Jansen (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-20640
        # Subject Branch Project Status CR V

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes